tests/baselines/reference/instanceofTypeAliasToGenericClass.errors.txt
tests/cases/compiler/instanceofTypeAliasToGenericClass.ts(9,12): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.


==== tests/cases/compiler/instanceofTypeAliasToGenericClass.ts (1 errors) ====
    // If Table is non generic error does not occur
    declare class TableClass<S = any>  {
        _field: S
    }
    
    export type Table = TableClass;
    
    function fn<T extends Table>(o: T) {
        return o instanceof TableClass // error in 4.8
               ~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
    }
    
    declare const o: Table;
    o instanceof TableClass // This is ok 
    